# atmaCup5

./: .gitignore  pyproject.toml  run.py  run_1D_CNN.py
configs/: model_0.json  model_1.json  model_1dcnn_0.json  model_1dcnn_1.json  model_1dcnn_2.json  model_1dcnn_3.json  model_1dcnn_4.json  model_1dcnn_7.json  model_2.json  model_3.json  model_4.json  model_7.json
data/output/model_0/: output.json
data/output/model_1/: output.json
data/output/model_1dcnn_0/: output.json
data/output/model_1dcnn_1/: output.json
data/output/model_1dcnn_2/: output.json
data/output/model_1dcnn_3/: output.json
data/output/model_1dcnn_5/: output.json
data/output/model_1dcnn_6/: output.json
data/output/model_1dcnn_7/: output.json
data/output/model_2/: output.json
data/output/model_3/: output.json
data/output/model_4/: output.json
data/output/model_5/: output.json
data/output/model_6/: output.json
data/output/model_7/: output.json
features/: agg_func.py  base.py  embedding_intensity_features.py  intensity_diff_features.py  intensity_features.py  label_encoding.py  numeric_features.py
models/: base.py  keras_1d_cnn.py  model_1d_cnn.py  model_lightgbm.py
src/: get_folds.py  preprocessor.py  runner.py  runner_NN.py  submission.py  utils.py
