[tool.poetry]
name = "atmacup5"
version = "0.1.0"
description = ""
authors = ["hakubishin3 <hakubishin3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
scikit-learn = "0.22.2"
tensorflow = "^2.2.0"
numpy = "^1.18.4"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
click = "^7.1.2"
torch = "^1.5.0"
pyarrow = "^0.17.1"
lightgbm = "^2.3.1"
feather-format = "^0.4.1"
tqdm = "^4.46.0"
seaborn = "^0.10.1"
PyWavelets = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
